# GenAI-Companion-with-ACE

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  evaluate_performance.py  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml
configs/: companion_config.yaml
data/ace/: questions_genai.json
data/chroma/: chroma.sqlite3
data/chroma.backup.20251122_121602/: chroma.sqlite3
docs/: architecture.md  index.md  modules.md  operations.md
scripts/: build_ace_dataset.py  generate_ace_report.py  ingest_eval_questions.py  ingest_transcripts.py  run_ace_iterations.py  validate_playbook.py  validate_questions.py
src/genai_companion_with_ace/: cli.py  config.py  diagnostics.py  llm.py
src/genai_companion_with_ace/ace_integration/: __init__.py  ace_trigger.py  conversation_logger.py  playbook_loader.py
src/genai_companion_with_ace/app/: bootstrap.py
src/genai_companion_with_ace/chat/: __init__.py  conversation.py  modes.py  query_processor.py  response_formatter.py
src/genai_companion_with_ace/evaluation/: __init__.py  dataset.py  evaluator.py  reporting.py  rubric.py
src/genai_companion_with_ace/rag/: __init__.py  answer_generation.py  embeddings.py  ingestion.py  retrieval.py  vector_store.py
src/genai_companion_with_ace/utils/: __init__.py  time.py
tests/: conftest.py  test_cli.py
tests/ace/: test_ace_trigger.py  test_conversation_logger.py  test_playbook_loader.py
tests/chat/: test_conversation.py  test_query_processor.py  test_response_formatter.py
tests/evaluation/: test_dataset.py  test_reporting.py  test_rubric_engine.py
tests/rag/: test_answer_generation.py  test_embeddings.py  test_ingestion.py  test_retrieval.py  test_vector_store.py
ui/: streamlit_app.py
